--- a/html/introducao.html
+++ b/html/introducao.html
@@ -1,20 +1,15 @@
 <!DOCTYPE html>
-
 <html>
+    <head>
+        <title>HTML - Introducao</title>
+    </head>
 
-<head>
-    <title>HTML - Introducao</title>
-</head>
+    <body>
 
-<body>
-
-</body>
-
+    </body>
 </html>
 
-<!-- Fonte: https://www.w3schools.com/html/html_intro.asp
-
------ REDES SOCIAIS -----
+<!-- ----- REDES SOCIAIS -----
 Email: pet.ads.ifsp@gmail.com
 Facebook: https://www.facebook.com/PETADSIFSP
 GitHub: https://github.com/petadsifsp
@@ -24,9 +19,9 @@ Twitter: https://twitter.com/pet_ads_ifsp
 YouTube: https://www.youtube.com/channel/UC92DC8TQL6KfxVS2mKemXiw
 
 ----- POSTAGENS -----
-Facebook: 
-GitHub: 
-Instagram - Postagem: 
-Instagram - Reels: 
-Twitter: 
-YouTube - Shorts:  -->
+Facebook - Vídeo: https://fb.watch/aNrWivsKgz/
+Instagram - Publicação: https://www.instagram.com/p/CZNMy6ZvjFR/?utm_source=ig_web_copy_link
+Instagram - Vídeo: https://www.instagram.com/tv/CZNM5DGojvo/?utm_source=ig_web_copy_link
+Twitter - Publicação: https://twitter.com/pet_ads_ifsp/status/1486444344336916485?s=20
+Twitter - Publicação: https://twitter.com/pet_ads_ifsp/status/1486444457595707404?s=20
+Twitter - Vídeo: https://twitter.com/pet_ads_ifsp/status/1486444801717374984?s=20 -->
