--- a/html/introducao.html
+++ b/html/introducao.html
@@ -19,9 +19,9 @@ Twitter: https://twitter.com/pet_ads_ifsp
 YouTube: https://www.youtube.com/channel/UC92DC8TQL6KfxVS2mKemXiw
 
  ----- POSTAGENS -----
-Facebook - Vídeo: https://fb.watch/aNrWivsKgz/
+Facebook - Vídeo: https://fb.watch/aNsU4uzOV9/
 Instagram - Publicação: https://www.instagram.com/p/CZNMy6ZvjFR/?utm_source=ig_web_copy_link
 Instagram - Vídeo: https://www.instagram.com/tv/CZNM5DGojvo/?utm_source=ig_web_copy_link
-Twitter - Publicação: https://twitter.com/pet_ads_ifsp/status/1486444344336916485?s=20
-Twitter - Publicação: https://twitter.com/pet_ads_ifsp/status/1486444457595707404?s=20
-Twitter - Vídeo: https://twitter.com/pet_ads_ifsp/status/1486446318088241157?s=20 -->
+Twitter - Publicação 1: https://twitter.com/pet_ads_ifsp/status/1486444344336916485?s=20
+Twitter - Publicação 2: https://twitter.com/pet_ads_ifsp/status/1486444457595707404?s=20
+Twitter - Vídeo: https://twitter.com/pet_ads_ifsp/status/1486448091427483656?s=20 -->
