--- a/html/introducao.html
+++ b/html/introducao.html
@@ -22,6 +22,7 @@ YouTube: https://www.youtube.com/channel/UC92DC8TQL6KfxVS2mKemXiw
 Facebook - Vídeo: https://fb.watch/aNsU4uzOV9/
 Instagram - Publicação: https://www.instagram.com/p/CZNMy6ZvjFR/?utm_source=ig_web_copy_link
 Instagram - Vídeo: https://www.instagram.com/tv/CZNM5DGojvo/?utm_source=ig_web_copy_link
+TikTok: https://vm.tiktok.com/ZMLNef55b/
 Twitter - Publicação 1: https://twitter.com/pet_ads_ifsp/status/1486444344336916485?s=20
 Twitter - Publicação 2: https://twitter.com/pet_ads_ifsp/status/1486444457595707404?s=20
 Twitter - Vídeo: https://twitter.com/pet_ads_ifsp/status/1486448091427483656?s=20 -->
