--- a/css/seletores/seletores.html
+++ b/css/seletores/seletores.html
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
 
 <head>
-    <title>CSS - Sintaxe - CSS Embutido</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Seletores</title>
+    <link rel="stylesheet" href="seletoresStyle.css">
 </head>
 
-<body style="background-color: #35AEF9;">
+<body>
+
+    <h1 id="titulo">Título 1</h1>
+    <h2 class="segundo">Título 2</h2>
+    <h3>Título 3</h3>
+
+    <p>Parágrafo 1</p>
+    <p class="segundo">Parágrafo 2</p>
 
 </body>
 
