--- a/css/sintaxe/interno/sintaxe.html
+++ b/css/sintaxe/interno/sintaxe.html
@@ -25,4 +25,12 @@ Instagram: https://www.instagram.com/petadsifsp/
 Site: http://pet_ads.paginas.scl.ifsp.edu.br/
 TikTok: https://vm.tiktok.com/ZMLNJ7pTb/
 Twitter: https://twitter.com/pet_ads_ifsp
-YouTube: https://www.youtube.com/channel/UC92DC8TQL6KfxVS2mKemXiw -->
+YouTube: https://www.youtube.com/channel/UC92DC8TQL6KfxVS2mKemXiw
+
+----- POSTAGENS -----
+Facebook - Vídeo:  
+Instagram - Publicação: 
+Instagram - Vídeo: 
+TikTok: 
+Twitter - Publicação: 
+Twitter - Vídeo: -->
