--- a/javascript/alocacao/externo/head/alocacao.html
+++ b/javascript/alocacao/externo/head/alocacao.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
+
 <html>
 
 <head>
-    <title>CSS - Sintaxe - CSS Embutido</title>
+    <title>JavaScript - Alocacao - JS Externo</title>
+    <script src="alocacaoJavascript.js"></script>
 </head>
 
-<body style="background-color: #35AEF9;">
+<body>
 
 </body>
 
