--- a/javascript/alocacao/interno/body/alocacao.html
+++ b/javascript/alocacao/interno/body/alocacao.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
+
 <html>
 
 <head>
-    <title>CSS - Sintaxe - CSS Embutido</title>
+    <title>JavaScript - Alocacao - JS Embutido - Body</title>
 </head>
 
-<body style="background-color: #35AEF9;">
-
+<body>
+    <script>
+    </script>
 </body>
 
 </html>
