--- a/javascript/alocacao/interno/head/alocacao.html
+++ b/javascript/alocacao/interno/head/alocacao.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
+
 <html>
 
 <head>
-    <title>CSS - Sintaxe - CSS Embutido</title>
+    <title>JavaScript - Alocacao - JS Embutido - Head</title>
+    <script>
+    </script>
 </head>
 
-<body style="background-color: #35AEF9;">
+<body>
 
 </body>
 
