--- a/html/introducao.html
+++ b/html/introducao.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
+
 <html>
-    <head>
-        <title>HTML - Introducao</title>
-    </head>
 
-    <body>
+<head>
+    <title>HTML - Introducao</title>
+</head>
 
-    </body>
+<body>
+
+</body>
+
 </html>
 
 <!-- ----- REDES SOCIAIS -----
@@ -17,4 +20,12 @@ Instagram: https://www.instagram.com/petadsifsp/
 Site: http://pet_ads.paginas.scl.ifsp.edu.br/
 TikTok: https://vm.tiktok.com/ZMLNJ7pTb/
 Twitter: https://twitter.com/pet_ads_ifsp
-YouTube: https://www.youtube.com/channel/UC92DC8TQL6KfxVS2mKemXiw -->
+YouTube: https://www.youtube.com/channel/UC92DC8TQL6KfxVS2mKemXiw
+
+----- POSTAGENS -----
+Facebook - Vídeo:  
+Instagram - Publicação: 
+Instagram - Vídeo: 
+TikTok: 
+Twitter - Publicação: 
+Twitter - Vídeo: -->
