--- a/html/basico/basico.html
+++ b/html/basico/basico.html
@@ -26,3 +26,13 @@
 </body>
 
 </html>
+
+<!-- ----- REDES SOCIAIS -----
+Email: pet.ads.ifsp@gmail.com
+Facebook: https://www.facebook.com/PETADSIFSP
+GitHub: https://github.com/petadsifsp
+Instagram: https://www.instagram.com/petadsifsp/
+Site: http://pet_ads.paginas.scl.ifsp.edu.br/
+TikTok: https://vm.tiktok.com/ZMLNJ7pTb/
+Twitter: https://twitter.com/pet_ads_ifsp
+YouTube: https://www.youtube.com/channel/UC92DC8TQL6KfxVS2mKemXiw -->
