--- a/javascript/alocacao/interno/head/alocacao.html
+++ b/javascript/alocacao/interno/head/alocacao.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-    <title>JavaScript - Alocacao - JS Embutido - Head</title>
+    <title>JavaScript - Alocacao - Interno - Head</title>
     <script>
     </script>
 </head>
