--- a/javascript/alocacao/interno/body/alocacao.html
+++ b/javascript/alocacao/interno/body/alocacao.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-    <title>JavaScript - Alocacao - JS Embutido - Body</title>
+    <title>JavaScript - Alocacao - Interno - Body</title>
 </head>
 
 <body>
