--- a/javascript/alocacao/externo/body/alocacao.html
+++ b/javascript/alocacao/externo/body/alocacao.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-    <title>JavaScript - Alocacao - JS Externo</title>
+    <title>JavaScript - Alocacao - Externo - Body</title>
 </head>
 
 <body>
