--- a/javascript/alocacao/externo/head/alocacao.html
+++ b/javascript/alocacao/externo/head/alocacao.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-    <title>JavaScript - Alocacao - JS Externo</title>
+    <title>JavaScript - Alocacao - Externo - Head</title>
     <script src="alocacaoJavascript.js"></script>
 </head>
 
