--- a/javascript/saida.html
+++ b/javascript/saida.html
@@ -11,7 +11,8 @@
 <body>
 
     <script>
-        console.log("PET - ADS");
+        alert("PET - ADS")
+        console.log("IFSP - São Carlos");
     </script>
 </body>
 
