--- a/javascript/saida.html
+++ b/javascript/saida.html
@@ -11,7 +11,7 @@
 <body>
 
     <script>
-        alert("PET - ADS")
+        alert("PET - ADS");
         console.log("IFSP - São Carlos");
     </script>
 </body>
